Archive2/89/db898043eb8d2e/output
main.cpp:3:1: error: 'DWORD' does not name a type
 DWORD dwVal = (DWORD) (fEntropy[ival] * 255.0f);
 ^
